discussion/kv_engine/185020/185020_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: CDC stream backfill with a dropped collection

Primarily add a test that includes a dropped collection in the
scanned history range. This highlighted a problem in the collections
ScanContext as with history enabled the scanAllVersions method will
return both the create and drop of a collection as separate system
events. The isLogicallyDeleted code now needs to be able to distinguish
the create and drop collection events so that a backfill can exclude
the create event if the collection is dropped.

Change-Id: Icd78e81e9106d7c7014e9e7caecf89a948960d24

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-27 11:13:09.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-27 11:13:29.000000000
Message: 
Patch Set 11: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334633/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-27 11:39:09.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/949/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1834:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1838:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1842:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2903:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/949/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1834:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/949/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1137/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(794): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1137/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/919/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/919/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1255/ : FAILURE

Compile error at [2023-01-27T11:17:24.053Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1255/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/971/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [136/160]: test expired item with item_eviction...../kv_engine/engines/ep/tests/ep_testsuite.cc:6111 Test failed: `" (Expected `1", got `0" - Expect the compactor to delete an expired item)
[2023-01-27T11:31:45.402Z] (60 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/971/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/962/ : FAILURE

Compile error at [2023-01-27T11:29:28.657Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/962/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/969/ : FAILURE

Compile error at [2023-01-27T11:35:58.107Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/969/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/959/ : FAILURE

Compile error at [2023-01-27T11:38:39.385Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/959/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/942/ : FAILURE

Compile error at [2023-01-27T11:35:09.979Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/942/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/963/ : FAILURE

Compile error at [2023-01-27T11:21:38.945Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/963/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22399/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
